--- a/notes.html
+++ b/notes.html
@@ -78,6 +78,27 @@
                     >Imperial College London</a
                   >
                 </h4>
+                <ul>
+                  <li>
+                    <a href="#imperial-quantum-information">Quantum Information</a>
+                  </li>
+                  <li><a href="#imperial-quantum-optics">Quantum Optics</a></li>
+                  <li>
+                    <a href="#imperial-mathematical-methods-for-physicists"
+                      >Mathematical Methods for Physicists</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#imperial-advanced-classical-mechanics"
+                      >Advanced Classical Mechanics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#imperial-quantum-theory-of-matter"
+                      >Quantum Theory of Matter</a
+                    >
+                  </li>
+                  <li><a href="#imperial-laser-technology">Laser Technology</a></li>
                 <p></p>
                 <h4>
                   <a href="#hust" class="scrolly"
@@ -115,7 +136,7 @@
                     </p>
                   </header>
 
-                  <section>
+                  <section id="#imperial-quantum-information">
                     <h4><a>Quantum Information (Fall 2023)</a></h4>
                     <p>
                       This course was taught by Prof. Myungshik Kim. My notes
@@ -131,7 +152,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="#imperial-quantum-optics">
                     <h4><a>Quantum Optics (Fall 2023)</a></h4>
                     <ul>
                       <li>
@@ -141,7 +162,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="#imperial-mathematical-methods-for-physicists">
                     <h4>
                       <a>Mathematical Methods for Physicists (Fall 2023)</a>
                     </h4>
@@ -161,7 +182,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="#imperial-advanced-classical-mechanics">
                     <h4><a>Advanced Classical Mechanics (Fall 2023)</a></h4>
                     <ul>
                       <li>
@@ -173,7 +194,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="#imperial-quantum-theory-of-matter">
                     <h4><a>Quantum Theory of Matter (Spring 2024)</a></h4>
                     <ul>
                       <li>
@@ -185,7 +206,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="#imperial-laser-technology">
                     <h4><a>Laser Technology (Spring 2024)</a></h4>
                     <p>
                       This course covers two main topics:
