--- a/notes.html
+++ b/notes.html
@@ -80,7 +80,9 @@
                 </h4>
                 <ul>
                   <li>
-                    <a href="#imperial-quantum-information">Quantum Information</a>
+                    <a href="#imperial-quantum-information"
+                      >Quantum Information</a
+                    >
                   </li>
                   <li><a href="#imperial-quantum-optics">Quantum Optics</a></li>
                   <li>
@@ -98,7 +100,10 @@
                       >Quantum Theory of Matter</a
                     >
                   </li>
-                  <li><a href="#imperial-laser-technology">Laser Technology</a></li>
+                  <li>
+                    <a href="#imperial-laser-technology">Laser Technology</a>
+                  </li>
+                </ul>
                 <p></p>
                 <h4>
                   <a href="#hust" class="scrolly"
