--- a/notes.html
+++ b/notes.html
@@ -141,7 +141,7 @@
                     </p>
                   </header>
 
-                  <section id="#imperial-quantum-information">
+                  <section id="imperial-quantum-information">
                     <h4><a>Quantum Information (Fall 2023)</a></h4>
                     <p>
                       This course was taught by Prof. Myungshik Kim. My notes
@@ -157,7 +157,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section id="#imperial-quantum-optics">
+                  <section id="imperial-quantum-optics">
                     <h4><a>Quantum Optics (Fall 2023)</a></h4>
                     <ul>
                       <li>
@@ -167,7 +167,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section id="#imperial-mathematical-methods-for-physicists">
+                  <section id="imperial-mathematical-methods-for-physicists">
                     <h4>
                       <a>Mathematical Methods for Physicists (Fall 2023)</a>
                     </h4>
@@ -187,7 +187,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section id="#imperial-advanced-classical-mechanics">
+                  <section id="imperial-advanced-classical-mechanics">
                     <h4><a>Advanced Classical Mechanics (Fall 2023)</a></h4>
                     <ul>
                       <li>
@@ -199,7 +199,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section id="#imperial-quantum-theory-of-matter">
+                  <section id="imperial-quantum-theory-of-matter">
                     <h4><a>Quantum Theory of Matter (Spring 2024)</a></h4>
                     <ul>
                       <li>
@@ -211,7 +211,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section id="#imperial-laser-technology">
+                  <section id="imperial-laser-technology">
                     <h4><a>Laser Technology (Spring 2024)</a></h4>
                     <p>
                       This course covers two main topics:
