--- a/notes.html
+++ b/notes.html
@@ -79,28 +79,38 @@
                 </h4>
                 <ol>
                   <li>
-                    <a href="#imperial-quantum-information"
+                    <a href="#imperial-quantum-information" class="scrolly"
                       >Quantum Information</a
                     >
                   </li>
-                  <li><a href="#imperial-quantum-optics">Quantum Optics</a></li>
                   <li>
-                    <a href="#imperial-mathematical-methods-for-physicists"
+                    <a href="#imperial-quantum-optics" class="scrolly"
+                      >Quantum Optics</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#imperial-mathematical-methods-for-physicists"
+                      class="scrolly"
                       >Mathematical Methods for Physicists</a
                     >
                   </li>
                   <li>
-                    <a href="#imperial-advanced-classical-mechanics"
+                    <a
+                      href="#imperial-advanced-classical-mechanics"
+                      class="scrolly"
                       >Advanced Classical Mechanics</a
                     >
                   </li>
                   <li>
-                    <a href="#imperial-quantum-theory-of-matter"
+                    <a href="#imperial-quantum-theory-of-matter" class="scrolly"
                       >Quantum Theory of Matter</a
                     >
                   </li>
                   <li>
-                    <a href="#imperial-laser-technology">Laser Technology</a>
+                    <a href="#imperial-laser-technology" class="scrolly"
+                      >Laser Technology</a
+                    >
                   </li>
                 </ol>
                 <p></p>
