--- a/notes.html
+++ b/notes.html
@@ -514,7 +514,7 @@
                     </ul>
                   </section>
                   <section>
-                    <h4>Quantum Optics (Fall 2021)</h4>
+                    <h4><a>Quantum Optics (Fall 2021)</a></h4>
                     <p>Prof. Jia-Hua Li</p>
                     <ul>
                       <li>
@@ -550,7 +550,7 @@
                     </h3>
                   </header>
                   <section>
-                    <h4>Quantum Mechanics II (Summer 2020)</h4>
+                    <h4><a>Quantum Mechanics II (Summer 2020)</a></h4>
                     <p>
                       These are my lecture notes from the Quantum Mechanics II
                       course taught by Prof. Zhixin Qian during the 2020 Summer
