--- a/notes.html
+++ b/notes.html
@@ -119,6 +119,77 @@
                     >Huazhong University of Science and Technology</a
                   >
                 </h4>
+                <ol>
+                  <li>
+                    <a
+                      href="#hust-mathematical-methods-in-physics"
+                      class="scrolly"
+                      >Mathematical Methods in Physics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-theoretical-mechanics" class="scrolly"
+                      >Theoretical Mechanics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-electromagnetics" class="scrolly"
+                      >Electromagnetics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-optics" class="scrolly">Optics</a>
+                  </li>
+                  <li>
+                    <a href="#hust-analogue-electronics" class="scrolly"
+                      >Analogue Electronics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-quantum-mechanics" class="scrolly"
+                      >Quantum Mechanics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-electrodynamics" class="scrolly"
+                      >Electrodynamics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-advanced-quantum-mechanics" class="scrolly"
+                      >Advanced Quantum Mechanics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-digital-electronics" class="scrolly"
+                      >Digital Electronics</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#hust-thermodynamics-and-statistical-physics"
+                      class="scrolly"
+                      >Thermodynamics and Statistical Physics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-solid-state-physics" class="scrolly"
+                      >Solid State Physics</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#hust-quantum-optics" class="scrolly"
+                      >Quantum Optics</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="#hust-introduction-to-plasma-physics"
+                      class="scrolly"
+                      >Introduction to Plasma Physics</a
+                    >
+                  </li>
+                </ol>
                 <p></p>
                 <h4>
                   <a href="#pku" class="scrolly">Peking University</a>
