--- a/notes.html
+++ b/notes.html
@@ -194,6 +194,13 @@
                 <h4>
                   <a href="#pku" class="scrolly">Peking University</a>
                 </h4>
+                <ol>
+                  <li>
+                    <a href="#pku-quantum-mechanics" class="scrolly"
+                      >Quantum Mechanics II</a
+                    >
+                  </li>
+                </ol>
               </section>
             </div>
             <div class="col-8 col-12-mobile imp-mobile" id="content">
@@ -337,7 +344,7 @@
                     </p>
                   </header>
 
-                  <section>
+                  <section id="hust-mathematical-methods-in-physics">
                     <h4>Mathematical Methods in Physics (Fall 2019)</h4>
                     <p>
                       This course consists of two parts. The first part,
@@ -361,7 +368,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-theoretical-mechanics">
                     <h4>Theoretical Mechanics (Fall 2019)</h4>
                     <p>
                       Taught by Prof. Sheng-You Huang, this course covered
@@ -379,7 +386,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-electromagnetics">
                     <h4>Electromagnetics (Fall 2019)</h4>
                     <p>
                       This course was taught by Prof. Xue-Wen Chen, which
@@ -394,7 +401,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-optics">
                     <h4>Optics (Spring 2020)</h4>
                     <p>
                       This term was unique due to COVID-19, as we had to attend
@@ -427,7 +434,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-analogue-electronics">
                     <h4>Analogue Electronics (Spring 2020)</h4>
                     <p>
                       This course was taught by Prof. Tian-Ping Deng. My notes
@@ -463,7 +470,7 @@
                       >
                     </li>
                   </section>
-                  <section>
+                  <section id="hust-quantum-mechanics">
                     <h4>Quantum Mechanics (Fall 2020)</h4>
                     <p>
                       This course was taught by Prof. Ying Wu and Prof. Jia-Hua
@@ -490,7 +497,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-electrodynamics">
                     <h4>Electrodynamics (Fall 2020)</h4>
                     <p>Prof. Zhao-Feng Kang</p>
                     <ul>
@@ -501,7 +508,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-advanced-quantum-mechanics">
                     <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
                     <p>Prof. Yong Hu</p>
                     <ul>
@@ -513,7 +520,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-digital-electronics">
                     <h4>Digital Electronics (Fall 2020)</h4>
                     <p>Prof. Qi Song</p>
                     <ul>
@@ -549,7 +556,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-thermodynamics-and-statistical-physics">
                     <h4>
                       Thermodynamics and Statistical Physics (Spring 2021)
                     </h4>
@@ -572,7 +579,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-solid-state-physics">
                     <h4>Solid State Physics (Spring 2021)</h4>
                     <p>Prof. Liu-Song Yuan</p>
                     <ul>
@@ -584,7 +591,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-quantum-optics">
                     <h4><a>Quantum Optics (Fall 2021)</a></h4>
                     <p>Prof. Jia-Hua Li</p>
                     <ul>
@@ -600,7 +607,7 @@
                       </li>
                     </ul>
                   </section>
-                  <section>
+                  <section id="hust-introduction-to-plasma-physics">
                     <h4>Introduction to Plasma Physics (Fall 2021)</h4>
                     <p>Prof. He-Lin Wei</p>
                     <ul>
@@ -620,7 +627,7 @@
                       <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
-                  <section>
+                  <section id="pku-quantum-mechanics">
                     <h4><a>Quantum Mechanics II (Summer 2020)</a></h4>
                     <p>
                       These are my lecture notes from the Quantum Mechanics II
