--- a/notes.html
+++ b/notes.html
@@ -679,6 +679,28 @@
                     </ul>
                   </section>
                 </section>
+                <hr />
+                <section id="others">
+                  <header>
+                    <h3>
+                      <a href="#others" class="scrolly">Others</a>
+                    </h3>
+                  </header>
+                  <section>
+                    <h4>GRE Physics</h4>
+                    <p>
+                      These are my notes for the Physics GRE, which I took in
+                      2021.
+                    </p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/Physics_GRE_Notes.pdf"
+                          ><strong>Study</strong> Notes on Physics GRE</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                </section>
               </article>
             </div>
           </div>
