--- a/notes.html
+++ b/notes.html
@@ -201,6 +201,18 @@
                     >
                   </li>
                 </ol>
+                <p></p>
+                <h4>
+                  <a href="#others" class="scrolly">Others</a>
+                </h4>
+                <ol>
+                  <li>
+                    <a href="#others-physics-gre" class="scrolly"
+                      >Physics GRE</a
+                    >
+                  </li>
+                </ol>
+                <p></p>
               </section>
               <br /><br />
             </div>
@@ -686,11 +698,11 @@
                       <a href="#others" class="scrolly">Others</a>
                     </h3>
                   </header>
-                  <section>
-                    <h4>GRE Physics</h4>
+                  <section id="others-physics-gre">
+                    <h4><a>Physics GRE (Fall 2021)</a></h4>
                     <p>
-                      These are my notes for the Physics GRE, which I took in
-                      2021.
+                      These are my self-study notes for the Physics GRE, which I
+                      took in 2021.
                     </p>
                     <ul>
                       <li>
