--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </p>
           </header>
           <div class="row gtr-200">
-            <div class="col-4 col-12-mobile" id="sidebar">
+            <div class="col-4 col-12-mobile">
               <hr class="first" />
               <section>
                 <div class="row gtr-50">
