--- a/presentations.html
+++ b/presentations.html
@@ -17,6 +17,7 @@
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   </head>
   <body class="no-sidebar is-preload">
     <div id="page-wrapper">
@@ -74,6 +75,24 @@
                 <a href="#presentations" class="scrolly">Presentations</a>
               </h2>
             </header>
+            <section>
+              <header>
+                <h3>2021</h3>
+              </header>
+              <ul>
+                <li>
+                  <strong
+                    >Course presentation:
+                    <a href="presentations/2020-12-10-quantum-measurement.pdf"
+                      >Measurement of the Gravitational Constant $G$</a
+                    ></strong
+                  ><br />
+                  2020-12-10<br />
+                  School of Physics, Huazhong University of Science and
+                  Technology
+                </li>
+              </ul>
+            </section>
             <section>
               <header>
                 <h3>2020</h3>
