--- a/presentations.html
+++ b/presentations.html
@@ -84,7 +84,7 @@
                   <strong
                     >Course presentation:
                     <a href="presentations/2020-12-10-quantum-measurement.pdf"
-                      >Measurement of the Gravitational Constant $G$</a
+                      >Measurement of the Gravitational Constant \(G\)</a
                     ></strong
                   ><br />
                   2020-12-10<br />
