--- a/presentations.html
+++ b/presentations.html
@@ -83,11 +83,11 @@
                 <li>
                   <strong
                     >Course presentation:
-                    <a href="presentations/2020-12-10-quantum-measurement.pdf"
+                    <a href="presentations/2021-06-01-G.pdf"
                       >Measurement of the Gravitational Constant \(G\)</a
                     ></strong
                   ><br />
-                  2020-12-10<br />
+                  <i class="fas fa-calendar-day"></i>2021-06-01<br />
                   School of Physics, Huazhong University of Science and
                   Technology
                 </li>
