--- a/presentations.html
+++ b/presentations.html
@@ -105,7 +105,7 @@
                       >Quantum Entanglement and Quantum Measurement</a
                     ></strong
                   ><br />
-                  2020-12-10<br />
+                  <i class="icon fa-solid fa-calendar-day"></i>2020-12-10<br />
                   School of Physics, Huazhong University of Science and
                   Technology
                 </li>
