--- a/presentations.html
+++ b/presentations.html
@@ -87,9 +87,9 @@
                       >Measurement of the Gravitational Constant \(G\)</a
                     ></strong
                   ><br />
-                  <i class="fas fa-calendar-day"></i>2021-06-01<br />
-                  School of Physics, Huazhong University of Science and
-                  Technology
+                  <i class="fas fa-calendar-day"></i> 2021-06-01<br />
+                  <i class="fas fa-map-pin"></i> School of Physics, Huazhong
+                  University of Science and Technology
                 </li>
               </ul>
             </section>
@@ -105,9 +105,9 @@
                       >Quantum Entanglement and Quantum Measurement</a
                     ></strong
                   ><br />
-                  <i class="icon fa-solid fa-calendar-day"></i>2020-12-10<br />
-                  School of Physics, Huazhong University of Science and
-                  Technology
+                  <i class="fas fa-calendar-day"></i> 2020-12-10<br />
+                  <i class="fas fa-map-pin"></i> School of Physics, Huazhong
+                  University of Science and Technology
                 </li>
               </ul>
             </section>
