--- a/presentations.html
+++ b/presentations.html
@@ -81,11 +81,9 @@
               </header>
               <ul>
                 <li>
-                  <strong
-                    >Course presentation:
-                    <a href="presentations/2021-06-01-G.pdf"
-                      >Measurement of the Gravitational Constant \(G\)</a
-                    ></strong
+                  <strong>Course presentation: </strong
+                  ><a href="presentations/2021-06-01-G.pdf"
+                    >Measurement of the Gravitational Constant \(G\)</a
                   ><br />
                   <i class="fas fa-calendar-day"></i
                   >&nbsp;&nbsp;2021-06-01<br />
@@ -100,11 +98,9 @@
               </header>
               <ul>
                 <li>
-                  <strong
-                    >Course presentation:
-                    <a href="presentations/2020-12-10-quantum-measurement.pdf"
-                      >Quantum Entanglement and Quantum Measurement</a
-                    ></strong
+                  <strong>Course presentation: </strong
+                  ><a href="presentations/2020-12-10-quantum-measurement.pdf"
+                    >Quantum Entanglement and Quantum Measurement</a
                   ><br />
                   <i class="fas fa-calendar-day"></i
                   >&nbsp;&nbsp;2020-12-10<br />
