--- a/presentations.html
+++ b/presentations.html
@@ -82,7 +82,7 @@
               <ul>
                 <li>
                   <strong>Course presentation: </strong
-                  ><a href="presentations/2021-06-01-G.pdf"
+                  ><a href="docs/presentations/2021-06-01-G.pdf"
                     >Measurement of the Gravitational Constant \(G\)</a
                   ><br />
                   <i class="fas fa-calendar-day"></i
@@ -99,7 +99,8 @@
               <ul>
                 <li>
                   <strong>Course presentation: </strong
-                  ><a href="presentations/2020-12-10-quantum-measurement.pdf"
+                  ><a
+                    href="docs/presentations/2020-12-10-quantum-measurement.pdf"
                     >Quantum Entanglement and Quantum Measurement</a
                   ><br />
                   <i class="fas fa-calendar-day"></i
