--- a/presentations.html
+++ b/presentations.html
@@ -85,10 +85,9 @@
                   ><a href="docs/presentations/2021-06-01-G.pdf"
                     >Measurement of the Gravitational Constant \(G\)</a
                   ><br />
-                  <i class="fas fa-calendar-day"></i
-                  >&nbsp;&nbsp;2021-06-01<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;School of Physics,
-                  Huazhong University of Science and Technology
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 1, 2021<br />
+                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
                 </li>
               </ul>
             </section>
@@ -103,10 +102,10 @@
                     href="docs/presentations/2020-12-10-quantum-measurement.pdf"
                     >Quantum Entanglement and Quantum Measurement</a
                   ><br />
-                  <i class="fas fa-calendar-day"></i
-                  >&nbsp;&nbsp;2020-12-10<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;School of Physics,
-                  Huazhong University of Science and Technology
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;December 10,
+                  2020<br />
+                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
                 </li>
               </ul>
             </section>
