--- a/presentations.html
+++ b/presentations.html
@@ -81,7 +81,7 @@
               </header>
               <ul>
                 <li>
-                  <strong>Course presentation: </strong
+                  <strong>Lab Presentation: </strong
                   ><a href="docs/presentations/2021-06-01-G.pdf"
                     >Measurement of the Gravitational Constant \(G\)</a
                   ><br />
@@ -97,13 +97,32 @@
               </header>
               <ul>
                 <li>
-                  <strong>Course presentation: </strong
+                  <strong>Lab Presentation: </strong
                   ><a
                     href="docs/presentations/2020-12-10-quantum-measurement.pdf"
                     >Quantum Entanglement and Quantum Measurement</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;December 10,
                   2020<br />
+                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
+                </li>
+              </ul>
+            </section>
+            <section>
+              <header>
+                <h3>2019</h3>
+              </header>
+              <ul>
+                <li>
+                  <strong>Lab Presentation: </strong
+                  ><a
+                    href="docs/presentations/2019-12-20-magnetic-field-distribution.pdf"
+                    >Magnetic Field Distribution in Current-Carrying Solenoids
+                    and Helmholtz Coils</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;November 16,
+                  2019<br />
                   <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;School of
                   Physics, Huazhong University of Science and Technology
                 </li>
