--- a/presentations.html
+++ b/presentations.html
@@ -77,6 +77,24 @@
             </header>
             <section>
               <header>
+                <h3>2023</h3>
+              </header>
+              <ul>
+                <li>
+                  <strong>Quarterly Session: </strong
+                  ><a href="docs/presentations/2023-08-31-calibration.pdf"
+                    >Automated Calibration of Experimental Parameters in
+                    Trapped-Ion Quantum Computing</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;August 31,
+                  2023<br />
+                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;Institute for
+                  Quantum Computing, Baidu Research, Baidu Inc.
+                </li>
+              </ul>
+            </section>
+            <section>
+              <header>
                 <h3>2021</h3>
               </header>
               <ul>
