--- a/presentations.html
+++ b/presentations.html
@@ -99,7 +99,7 @@
               </header>
               <ul>
                 <li>
-                  <strong>Lab Presentation: </strong
+                  <strong>Class Presentation: </strong
                   ><a href="docs/presentations/2021-06-01-G.pdf"
                     >Measurement of the Gravitational Constant \(G\)</a
                   ><br />
@@ -115,7 +115,7 @@
               </header>
               <ul>
                 <li>
-                  <strong>Lab Presentation: </strong
+                  <strong>Class Presentation: </strong
                   ><a
                     href="docs/presentations/2020-12-10-quantum-measurement.pdf"
                     >Quantum Entanglement and Quantum Measurement</a
@@ -133,7 +133,7 @@
               </header>
               <ul>
                 <li>
-                  <strong>Lab Presentation: </strong
+                  <strong>Class Presentation: </strong
                   ><a
                     href="docs/presentations/2019-12-20-magnetic-field-distribution.pdf"
                     >Magnetic Field Distribution in Current-Carrying Solenoids
