--- a/presentations.html
+++ b/presentations.html
@@ -92,6 +92,19 @@
                   Quantum Computing, Baidu Research, Baidu Inc.
                 </li>
               </ul>
+              <ul>
+                <li>
+                  <strong>IBPE Annual Conference: </strong
+                  ><a href="docs/presentations/2023-04-29-ion-trap-qc.pdf"
+                    >Ion Trap Quantum Computing: From Theory to Reality</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;April 29,
+                  2023<br />
+                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;Innovative
+                  Base of Physics Experiements (IBPE), Huazhong University of
+                  Science and Technology
+                </li>
+              </ul>
             </section>
             <section>
               <header>
