--- a/presentations.html
+++ b/presentations.html
@@ -77,6 +77,24 @@
             </header>
             <section>
               <header>
+                <h3>2024</h3>
+              </header>
+              <ul>
+                <li>
+                  <strong>Course Presentation: </strong
+                  ><a href="docs/presentations/2024-02-22-scaling.pdf"
+                    >Architectures and Approaches in Scaling the Trapped-Ion
+                    Quantum Computer</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;January 22,
+                  2024<br />
+                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;Blackett
+                  Laboratory, Imperial College London
+                </li>
+              </ul>
+            </section>
+            <section>
+              <header>
                 <h3>2023</h3>
               </header>
               <ul>
