--- a/presentations.html
+++ b/presentations.html
@@ -88,7 +88,7 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;January 22,
                   2024<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;Blackett
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Blackett
                   Laboratory, Imperial College London
                 </li>
               </ul>
@@ -106,7 +106,7 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;August 31,
                   2023<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;Institute for
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Institute for
                   Quantum Computing, Baidu Research, Baidu Inc.
                 </li>
               </ul>
@@ -118,7 +118,7 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;April 29,
                   2023<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;Innovative
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;Innovative
                   Base of Physics Experiements (IBPE), Huazhong University of
                   Science and Technology
                 </li>
@@ -135,7 +135,7 @@
                     >Measurement of the Gravitational Constant \(G\)</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 1, 2021<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;School of
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
                   Physics, Huazhong University of Science and Technology
                 </li>
               </ul>
@@ -153,7 +153,7 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;December 10,
                   2020<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;School of
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
                   Physics, Huazhong University of Science and Technology
                 </li>
               </ul>
@@ -172,8 +172,8 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;November 16,
                   2019<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;&nbsp;School of
-                  Physics, Huazhong University of Science and Technology
+                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;School of Physics,
+                  Huazhong University of Science and Technology
                 </li>
               </ul>
             </section>
