--- a/presentations.html
+++ b/presentations.html
@@ -126,6 +126,22 @@
             </section>
             <section>
               <header>
+                <h3>2022</h3>
+              </header>
+              <ul>
+                <li>
+                  <strong>Graduation thesis presentation: </strong
+                  ><a href="docs/presentations/2022-05-25-NV-sensing.pdf"
+                    >Nanoscale Detection of Ions Using a Spin Quantum Sensor</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;May 25, 2022<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
+                </li>
+              </ul>
+            </section>
+            <section>
+              <header>
                 <h3>2021</h3>
               </header>
               <ul>
