--- a/presentations.html
+++ b/presentations.html
@@ -55,6 +55,7 @@
               </ul>
             </li>
             <li><a href="publications.html">Publications</a></li>
+            <li><a href="presentations.html">Presentations</a></li>
             <li><a href="notes.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
