--- a/presentations.html
+++ b/presentations.html
@@ -131,11 +131,21 @@
               </header>
               <ul>
                 <li>
-                  <strong>Graduation thesis presentation: </strong
+                  <strong>Bachelor Degree: </strong
                   ><a href="docs/presentations/2022-05-25-NV-sensing.pdf"
                     >Nanoscale Detection of Ions Using a Spin Quantum Sensor</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;May 25, 2022<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
+                </li>
+                <li>
+                  <strong>Research Progress: </strong
+                  ><a href="docs/presentations/2022-01-14-progress-talk.pdf"
+                    >Ions in an AC Electric Field</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;January 14,
+                  2022<br />
                   <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
                   Physics, Huazhong University of Science and Technology
                 </li>
