--- a/presentations.html
+++ b/presentations.html
@@ -199,8 +199,8 @@
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;November 16,
                   2019<br />
-                  <i class="fas fa-map-pin"></i>&nbsp;&nbsp;School of Physics,
-                  Huazhong University of Science and Technology
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
                 </li>
               </ul>
             </section>
