--- a/presentations.html
+++ b/presentations.html
@@ -157,11 +157,42 @@
               </header>
               <ul>
                 <li>
+                  <strong>journal Club: </strong
+                  ><a href="docs/presentations/2021-06-08-journal.pdf"
+                    >An Introduction to Ghost Imagine: Quantum and Classical</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 8, 2021<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
+                </li>
+                <li>
                   <strong>Class Presentation: </strong
                   ><a href="docs/presentations/2021-06-01-G.pdf"
                     >Measurement of the Gravitational Constant \(G\)</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 1, 2021<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
+                </li>
+
+                <li>
+                  <strong>journal Club: </strong
+                  ><a href="docs/presentations/2021-04-20-journal.pdf"
+                    >Polarization Entanglement-Enabled Quantum Holography</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;April 20,
+                  2021<br />
+                  <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
+                  Physics, Huazhong University of Science and Technology
+                </li>
+                <li>
+                  <strong>journal Club: </strong
+                  ><a href="docs/presentations/2021-03-30-journal.pdf"
+                    >General Model of Photon-Pair Detection with an Image
+                    Sensor</a
+                  ><br />
+                  <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;March 30,
+                  2021<br />
                   <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
                   Physics, Huazhong University of Science and Technology
                 </li>
