--- a/presentations.html
+++ b/presentations.html
@@ -159,7 +159,7 @@
               </header>
               <ul>
                 <li>
-                  <strong>journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="docs/presentations/2021-06-08-journal.pdf"
                     >An Introduction to Ghost Imagine: Quantum and Classical</a
                   ><br />
@@ -181,7 +181,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong>journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="docs/presentations/2021-04-20-journal.pdf"
                     >Polarization Entanglement-Enabled Quantum Holography</a
                   ><br />
@@ -193,7 +193,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong>journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="docs/presentations/2021-03-30-journal.pdf"
                     >General Model of Photon-Pair Detection with an Image
                     Sensor</a
