--- a/presentations.html
+++ b/presentations.html
@@ -142,7 +142,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong>Research Progress: </strong
+                  <strong>Journal Club: </strong
                   ><a href="docs/presentations/2022-01-14-progress-talk.pdf"
                     >Ions in an AC Electric Field</a
                   ><br />
