--- a/presentations.html
+++ b/presentations.html
@@ -131,7 +131,7 @@
               </header>
               <ul>
                 <li>
-                  <strong>Bachelor Degree: </strong
+                  <strong>Bachelor's Degree: </strong
                   ><a href="docs/presentations/2022-05-25-NV-sensing.pdf"
                     >Nanoscale Detection of Ions Using a Spin Quantum Sensor</a
                   ><br />
