--- a/notes.html
+++ b/notes.html
@@ -359,7 +359,7 @@
                   </header>
 
                   <section id="hust-mathematical-methods-in-physics">
-                    <h4>Mathematical Methods in Physics (Fall 2019)</h4>
+                    <h4><a>Mathematical Methods in Physics (Fall 2019)</a></h4>
                     <p>
                       This course consists of two parts. The first part,
                       <strong>Complex Analysis</strong>, was taught by Prof.
@@ -383,7 +383,7 @@
                     </ul>
                   </section>
                   <section id="hust-theoretical-mechanics">
-                    <h4>Theoretical Mechanics (Fall 2019)</h4>
+                    <h4><a>Theoretical Mechanics (Fall 2019)</a></h4>
                     <p>
                       Taught by Prof. Sheng-You Huang, this course covered
                       topics ranging from Lagrangian Mechanics to Hamiltonian
@@ -401,7 +401,7 @@
                     </ul>
                   </section>
                   <section id="hust-electromagnetics">
-                    <h4>Electromagnetics (Fall 2019)</h4>
+                    <h4><a>Electromagnetics (Fall 2019)</a></h4>
                     <p>
                       This course was taught by Prof. Xue-Wen Chen, which
                       covered include electrostatics, magnetostatics,
@@ -416,7 +416,7 @@
                     </ul>
                   </section>
                   <section id="hust-optics">
-                    <h4>Optics (Spring 2020)</h4>
+                    <h4><a>Optics (Spring 2020)</a></h4>
                     <p>
                       This term was unique due to COVID-19, as we had to attend
                       lectures online from home. The course was taught by Prof.
@@ -449,7 +449,7 @@
                     </ul>
                   </section>
                   <section id="hust-analogue-electronics">
-                    <h4>Analogue Electronics (Spring 2020)</h4>
+                    <h4><a>Analogue Electronics (Spring 2020)</a></h4>
                     <p>
                       This course was taught by Prof. Tian-Ping Deng. My notes
                       based on his lecture online,
@@ -485,7 +485,7 @@
                     </li>
                   </section>
                   <section id="hust-quantum-mechanics">
-                    <h4>Quantum Mechanics (Fall 2020)</h4>
+                    <h4><a>Quantum Mechanics (Fall 2020)</a></h4>
                     <p>
                       This course was taught by Prof. Ying Wu and Prof. Jia-Hua
                       Li. However, it overlapped with another advanced course I
@@ -512,7 +512,7 @@
                     </ul>
                   </section>
                   <section id="hust-electrodynamics">
-                    <h4>Electrodynamics (Fall 2020)</h4>
+                    <h4><a>Electrodynamics (Fall 2020)</a></h4>
                     <p>Prof. Zhao-Feng Kang</p>
                     <ul>
                       <li>
@@ -523,7 +523,7 @@
                     </ul>
                   </section>
                   <section id="hust-advanced-quantum-mechanics">
-                    <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
+                    <h4><a>Advanced Quantum Mechanics (Fall 2020)</a></h4>
                     <p>Prof. Yong Hu</p>
                     <ul>
                       <li>
@@ -535,7 +535,7 @@
                     </ul>
                   </section>
                   <section id="hust-digital-electronics">
-                    <h4>Digital Electronics (Fall 2020)</h4>
+                    <h4><a>Digital Electronics (Fall 2020)</a></h4>
                     <p>Prof. Qi Song</p>
                     <ul>
                       <li>
@@ -572,7 +572,9 @@
                   </section>
                   <section id="hust-thermodynamics-and-statistical-physics">
                     <h4>
-                      Thermodynamics and Statistical Physics (Spring 2021)
+                      <a>
+                        Thermodynamics and Statistical Physics (Spring 2021)</a
+                      >
                     </h4>
                     <p>
                       This course, taught by Prof. Shun Wang, was quite
@@ -594,7 +596,7 @@
                     </ul>
                   </section>
                   <section id="hust-solid-state-physics">
-                    <h4>Solid State Physics (Spring 2021)</h4>
+                    <h4><a>Solid State Physics (Spring 2021)</a></h4>
                     <p>Prof. Liu-Song Yuan</p>
                     <ul>
                       <li>
@@ -622,7 +624,7 @@
                     </ul>
                   </section>
                   <section id="hust-introduction-to-plasma-physics">
-                    <h4>Introduction to Plasma Physics (Fall 2021)</h4>
+                    <h4><a>Introduction to Plasma Physics (Fall 2021)</a></h4>
                     <p>Prof. He-Lin Wei</p>
                     <ul>
                       <li>
