--- a/notes.html
+++ b/notes.html
@@ -603,7 +603,7 @@
                         <a href="docs/notes/[固体物理]期末复习笔记.pdf"
                           ><strong>Review</strong> Notes on Solid State
                           Physics</a
-                        >]
+                        >
                       </li>
                     </ul>
                   </section>
@@ -629,7 +629,7 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[等离子体导论]课堂笔记.pdf"
-                          ><strong>Review</strong> Notes on Introduction to
+                          ><strong>Study</strong> Notes on Introduction to
                           Plasma Physics</a
                         >
                       </li>
