--- a/presentations.html
+++ b/presentations.html
@@ -172,7 +172,7 @@
                 <li>
                   <strong>Class Presentation: </strong
                   ><a href="docs/presentations/2021-06-01-G.pdf"
-                    >Measurement of the Gravitational Constant \(G\)</a
+                    >Measurement of the Gravitational Constant</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 1, 2021<br />
                   <i class="fas fa-map-marked-alt"></i>&nbsp;&nbsp;School of
