--- a/presentations.html
+++ b/presentations.html
@@ -56,7 +56,7 @@
             </li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="presentations.html">Presentations</a></li>
-            <li><a href="notes.html">Notes</a></li>
+            <li><a href="notes/university.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
