--- a/charge-noise-in-semiconductor-spin-qubits.html
+++ b/charge-noise-in-semiconductor-spin-qubits.html
@@ -8,7 +8,7 @@
   <head>
     <title>Research - Chen's Physics World</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="images/icon.png" type="image/png" />
+    <link rel="icon" href="/images/icon.png" type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
