--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -8,7 +8,7 @@
   <head>
     <title>Right Sidebar - Helios by HTML5 UP</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="images/icon.png" type="image/png" />
+    <link rel="icon" href="/images/icon.png" type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
