--- a/publications.html
+++ b/publications.html
@@ -25,29 +25,31 @@
         <!-- Inner -->
         <div class="inner">
           <header>
-            <h1><a href="index.html" id="logo">Chen's Physics World</a></h1>
+            <h1><a href="/index.html" id="logo">Chen's Physics World</a></h1>
           </header>
         </div>
 
         <!-- Nav -->
         <nav id="nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li>
-              <a href="research.html">Research</a>
+              <a href="/research/index.html">Research</a>
               <ul>
                 <li>
-                  <a href="compilation-for-neutral-atom-quantum-computers.html"
+                  <a
+                    href="/research/compilation-for-neutral-atom-quantum-computers.html"
                     >Compilation for neutral atom quantum computers</a
                   >
                 </li>
                 <li>
-                  <a href="calibration-of-trapped-ion-systems.html"
+                  <a href="/research/calibration-of-trapped-ion-systems.html"
                     >Calibration of trapped-ion systems</a
                   >
                 </li>
                 <li>
-                  <a href="charge-noise-in-semiconductor-spin-qubits.html"
+                  <a
+                    href="/research/charge-noise-in-semiconductor-spin-qubits.html"
                     >Charge noise in semiconductor spin qubits</a
                   >
                 </li>
